samples/_failures_safe/1761002569_2a83b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1279b172.c: In function ‘main’:
./samples/SAFE/__tmp_1279b172.c:145:5: error: expected declaration or statement at end of input
  145 |     if (!compress_rle(input_data, input_size, &compressed)) {
      |     ^~
./samples/SAFE/__tmp_1279b172.c:145:5: error: expected declaration or statement at end of input
